--- a/src/systemd/outpost-gunicorn@.service
+++ b/src/systemd/outpost-gunicorn@.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=%I - WSGI
+Description=%I - gunicorn
 
 [Service]
 Type=simple
@@ -8,8 +8,8 @@ Environment=DJANGO_LOCAL_CONFIGURATION=/etc/django/%i.py
 Environment=PYTHONPATH=/var/www/wsgi/%i/src
 WorkingDirectory=/var/www/wsgi/%i/src
 User=www-data-api
-RuntimeDirectory=gunicorn-asgi
-ExecStart=/usr/bin/gunicorn3 -w 16 -k uvicorn.workers.UvicornWorker -b unix:/run/gunicorn-asgi/%i.sock outpost.asgi:application
+RuntimeDirectory=gunicorn
+ExecStart=/usr/bin/gunicorn3 -c python:outpost.gunicorn -b unix:/run/gunicorn-asgi/%i.sock outpost.asgi:application
 
 [Install]
-WantedBy=outpost-%i.target
+WantedBy=outpost@%i.target
