--- a/src/systemd/outpost-gunicorn@.service
+++ b/src/systemd/outpost-gunicorn@.service
@@ -9,7 +9,7 @@ Environment=PYTHONPATH=/var/www/wsgi/%i/src
 WorkingDirectory=/var/www/wsgi/%i/src
 User=www-data-api
 RuntimeDirectory=gunicorn
-ExecStart=/usr/bin/gunicorn3 -c python:outpost.gunicorn -b unix:/run/gunicorn-asgi/%i.sock outpost.asgi:application
+ExecStart=/usr/bin/gunicorn3 -c python:outpost.gunicorn -b unix:/run/gunicorn/%i.sock outpost.asgi:application
 
 [Install]
 WantedBy=outpost@%i.target
