Enable ASGI echo consumer.

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,4 +36,4 @@ known_third_party=django
 default_section=THIRDPARTY
 forced_separate=test_outpost
 not_skip = __init__.py
-skip = migrations, south_migrations
+skip = migrations, south_migrations, src/outpost/asgi.py
