--- a/src/systemd/outpost-gunicorn@.service
+++ b/src/systemd/outpost-gunicorn@.service
@@ -9,6 +9,7 @@ Environment=PYTHONPATH=/var/www/wsgi/%i/src
 WorkingDirectory=/var/www/wsgi/%i/src
 User=www-data-api
 RuntimeDirectory=gunicorn
+RuntimeDirectoryPreserve=yes
 ExecStart=/usr/bin/gunicorn3 -c python:outpost.gunicorn -b unix:/run/gunicorn/%i.sock outpost.asgi:application
 
 [Install]
